links index.js to index.html

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Fitness App</title>
   </head>
   <body>
-    Sample text - replace me!
+    <script src="src/index.js"></script>
   </body>
 </html>
