--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -5,6 +5,7 @@
     <title>Fitness App</title>
   </head>
   <body>
+    <script src="src/AppContainer.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
