organizes js files into adapters and components

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -6,15 +6,15 @@
     <title>Fitness App</title>
   </head>
   <body>
-    <div>
+    <!-- <div>
       <li name="" id="workout1"></li>
       <li name="" id="workout2"></li>
       <li name="" id="workout3"></li>
-    </div>
-    <!-- <div class="container">
-      <h1>Fitness App</h1> -->
+    </div> -->
+    <div class="container">
+      <h1>Fitness App</h1>
 
-    <!-- <div id="new-workout-container">
+      <div id="new-workout-container">
         <form id="new-workout-form">
           <input type="text" name="workout-name" id="new-workout-name" />
           <input type="submit" value="Save Workout" />
@@ -26,7 +26,7 @@
         </ul>
         <div id="workout-show"></div>
       </div>
-    </div> -->
+    </div>
     <script src="src/AppContainer.js"></script>
     <script src="src/index.js"></script>
   </body>
