links appropriate js files to index.html

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -27,7 +27,10 @@
         <div id="workout-show"></div>
       </div>
     </div>
-    <script src="src/AppContainer.js"></script>
+    <script type="text/javascript" src="src/components/workout.js"></script>
+    <script src="src/components/workouts.js"></script>
+    <script src="src/components/app.js"></script>
+    <script src="src/adapters/WorkoutsAdapter.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
