fixes css path in html

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <link rel="stylesheet" type="text/css" href="style/style.css" />
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <head>
     <meta charset="utf-8" />
     <title>Fitness App</title>
