--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -1,36 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <head>
     <meta charset="utf-8" />
     <title>Fitness App</title>
   </head>
   <body>
-    <!-- <div>
+    <div>
       <li name="" id="workout1"></li>
       <li name="" id="workout2"></li>
       <li name="" id="workout3"></li>
-    </div> -->
-    <div class="container">
-      <h1>Fitness App</h1>
-
-      <div id="new-workout-container">
-        <form id="new-workout-form">
-          <input type="text" name="workout-name" id="new-workout-name" />
-          <input type="submit" value="Save Workout" />
-        </form>
-      </div>
-      <div id="workouts-content">
-        <ul id="workouts-container">
-          <ul name="exercise-name"
-        </ul>
-        <div id="workout-show"></div>
-      </div>
     </div>
-    <script type="text/javascript" src="src/components/workout.js"></script>
-    <script src="src/components/workouts.js"></script>
-    <script src="src/components/app.js"></script>
-    <script src="src/adapters/WorkoutsAdapter.js"></script>
+
+    <script src="src/appContainer.js"></script>
+    <script src="src/workout.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
