--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -7,9 +7,13 @@
   </head>
   <body>
     <div>
-      <li name="" id="workout1"></li>
-      <li name="" id="workout2"></li>
-      <li name="" id="workout3"></li>
+      <select name="" id="workout1">
+        <option value="">lunges</option>
+        <option value="">squats</option>
+      </select>
+      <select name="" id="workout2"></select>
+      <select name="" id="workout3"></select>
+      <button>Create Workout</button>
     </div>
 
     <script src="src/appContainer.js"></script>
