adds create workout routine button

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -13,7 +13,8 @@
       </select>
       <select name="" id="workout2"></select>
       <select name="" id="workout3"></select>
-      <button>Create Workout</button>
+      <button id="createWorkoutRoutine">Create Workout Routine</button>
+      <div id="workoutRoutine"></div>
     </div>
 
     <script src="src/appContainer.js"></script>
