adds on to workout container div

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -11,7 +11,7 @@
       <ul id="workouts">
         <li class="workout-name">Workout A</li>
         <li class="workout-name">Workout B</li>
-        <li class="workout-bane">Workout C</li>
+        <li class="workout-namee">Workout C</li>
       </ul>
     </nav>
     <div class="container">
@@ -22,7 +22,6 @@
         </form>
         <div id="workouts-content">
           <ul id="workouts-container">
-            <ul name="exercise-name"
           </ul>
           <div id="workout-show"></div>
         </div>
