--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -44,10 +44,11 @@
       
   <script type="text/javascript" src="src/components/workout.js"></script>
  
- 
+  <script type="text/javascript" src="src/components/exercise.js"></script>
   <script src="src/components/workouts.js"></script>
+  <script src="src/components/exercises.js"></script>
   <script src="src/components/app.js"></script>
-  
+  <script src="src/adapters/ExercisesAdapter.js"></script>
   <script src="src/adapters/WorkoutsAdapter.js"></script>
   <script src="src/index.js"></script>
   </body>
