updates js src links

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script type="text/javascript" src="src/components/exercise.js"></script>
-  <script src="src/components/exercises.js"></script>
+  <script src="src/components/exercise.js"></script>
+  <script src="src/components/workout.js"></script>
   <script src="src/components/app.js"></script>
   <script src="src/adapters/ExercisesAdapter.js"></script>
   <script src="src/adapters/WorkoutsAdapter.js"></script>
