fixes typo in clearPage function

--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="src/components/exercise.js"></script>
-  <script src="src/components/workout.js"></script>
-  <script src="src/components/app.js"></script>
-  <script src="src/adapters/ExercisesAdapter.js"></script>
-  <script src="src/adapters/WorkoutsAdapter.js"></script>
-  <script src="src/index.js"></script>
+  <script src="src/components/exercise.js" defer></script>
+  <script src="src/components/workout.js" defer></script>
+  <script src="src/components/app.js" defer></script>
+  <script src="src/adapters/ExercisesAdapter.js" defer></script>
+  <script src="src/adapters/WorkoutsAdapter.js" defer></script>
+  <script src="src/index.js" defer></script>
   <head>
     <meta charset="utf-8" />
     <title>Fitness App</title>
