--- a/fitness-frontend/index.html
+++ b/fitness-frontend/index.html
@@ -44,6 +44,7 @@
         </div>
         <button type="submit" id="submit-form">Submit</button>
       </form>
+      <button type="sort" id="sort-exercises">Sort</button>
     </div>
   </body>
 </html>
